--- a/Makefile.in
+++ b/Makefile.in
@@ -14,6 +14,8 @@ $(APP): $(HEXS) $(OBJS)
 rt/to_hex:
 	$(CC) $(CFLAGS) rt/to_hex_arr.c -o $@
 
+.SUFFIXES: .c .o .hex
+
 .c.o:
 	$(CC) -c $(CFLAGS) $< -o $@
 
@@ -24,4 +26,3 @@ clean:
 	rm -f $(APP) $(OBJS) rt/to_hex $(HEXS)
 
 .PHONY: all clean
-.SUFFIXES: .c .hex
